<resources>
    <string name="app_name">My WGU Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My WGU Tracker</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_term_list">All Terms</string>
    <string name="title_activity_course_list">All Courses</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_term">View Term</string>
    <string name="status">Status</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="confirm_delete_term">Are you sure you want to delete the currently selected term?</string>
    <string name="confirm_delete_course">Are you sure you want to delete the selected course and its assessments?</string>
    <string name="term_deleted">The term was deleted successfully.</string>
    <string name="course_deleted">The course was deleted successfully.</string>
    <string name="term_delete_failed">Delete failed: Not allowed to delete a term that contains courses.</string>
    <string name="course_delete_failed">Delete failed: Not allowed to delete a course that contains assessments.</string>
    <string name="unexpected_error">An unexpected error occurred.</string>
    <string name="dismiss">Dismiss</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_term">Edit Term</string>
    <string name="edit_course">Edit Course</string>
    <string name="new_term">Create New Term</string>
    <string name="new_course">Create New Course</string>
    <string name="term_updated">Term updated</string>
    <string name="course_updated">Course updated</string>
    <string name="term_title">Term Title</string>
    <string name="course_title">Course Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="term_courses">Term Courses</string>
    <string name="term_added">The term was added successfully.</string>
    <string name="course_added">The course was added successfully.</string>
    <string name="term_add_failed">The term was not able to be added.</string>
    <string name="course_add_failed">The course was not able to be added.</string>
    <string name="validation_fix_errors">Please complete the required fields and retry.</string>
    <string name="validation_end_before_start">The end date must be after the start date.</string>
    <string name="validation_required">Required Field</string>
    <string name="save">Save</string>
    <string name="title_activity_course">View Course</string>
    <string name="delete_course">Delete Course?</string>
    <string name="course_assessments">Course Assessments</string>
    <string name="course_mentor">Course Mentor:</string>
    <string name="due">Due</string>
    <string name="enable_start_alert">Enable Start Alert</string>
    <string name="enable_end_alert">Enable End Alert</string>
    <string name="course_status">Course Status</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="select_a_mentor_description">Select a mentor or enter a new one below.</string>
    <string name="mentor_not_present_description">If not present in the list, create a new mentor.</string>
    <string name="select_a_course_mentor">select a course mentor</string>
    <string name="validation_phone">Please enter a valid telephone number.</string>
    <string name="validation_email">Please enter a valid email address.</string>
    <string name="term">Term</string>
    <string name="assessment_title">Assessment Name</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="goal_date">Goal Date</string>
    <string name="new_assessment">Create New Assessment</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="assessment_added">The assessment was added successfully.</string>
    <string name="assessment_add_failed">The assessment could not be added.</string>
    <string name="confirm_delete_assessment">Are you sure you want to delete the current assessment?</string>
    <string name="assessment_deleted">The assessment was deleted successfully.</string>
    <string name="assessment_delete_failed">The assessment could not be deleted.</string>
    <string name="course_notes">Course Notes</string>
    <string name="confirm_delete_note">Are you sure you want to delete the selected note?</string>
    <string name="notes">Notes</string>
    <string name="create_new_note">Create New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="cancel">Cancel</string>
    <string name="note_added">A new note was created.</string>
    <string name="note_insert_failed">There was  problem and the note was not added.</string>
    <string name="note_deleted">The note was deleted.</string>
    <string name="note_delete_failed">There was a problem and the note was not deleted.</string>
    <string name="note_update_failed">There was a problem and the note was not updated.</string>
    <string name="note_updated">The note was updated.</string>
    <string name="share">Share</string>
    <string name="sharing_course_note">Sharing a course note…</string>
    <string name="share_a_note">Share a Note</string>
    <string-array name="sample_list_items">
        <item>First item</item>
        <item>Second item</item>
        <item>Third item</item>
    </string-array>
    <string name="channel_name">Alerts</string>
    <string name="channel_description">Alert notifications based on course and assessment dates.</string>
    <string name="assessment_updated">The assessment was updated.</string>
    <string name="assessment_goal_notification_text">Your goal for completing %1$s is coming up on %2$s.</string>
    <string name="assessment_goal_notification_title">Reminder: Upcoming %1$s</string>
    <string name="course_start_notification_title">Reminder: Course Starting</string>
    <string name="course_end_notification_title">Reminder: Course Ending</string>
    <string name="course_start_notification_text">%1$s is scheduled to begin on %2$s.</string>
    <string name="course_end_notification_text">%1$s is scheduled to end on %2$s.</string>
    <string name="assessment_notification_added">An alert has been scheduled to remind you %1$d days before your goal date at 8:00 AM.</string>
    <string name="course_notification_added">Course alerts for scheduled start or end dates will notify you at 8:00 AM on the scheduled date.</string>
    <string name="enable_goal_alert">Enable Goal Alert</string>
    <string name="home">Home</string>
    <string name="termProgressMessage">Completed Terms:  %1$d out of %2$d</string>
    <string name="courseProgressMessage">Completed Courses:  %1$d out of %2$d</string>
    <string name="no_assessments_message">There are no assessments to display.  \nAdd some by tapping the plus button below.</string>
    <string name="no_terms_message">There are no terms to display.  \nAdd some by tapping the plus button below.</string>
    <string name="no_courses_message">There are no courses to display.  \nAdd some by tapping the plus button below.</string>
    <string name="no_notes_message">There are no notes to display.  \nAdd some by tapping the plus button below.</string>
    <string name="please_add_term">There are not terms yet.  Please add a term before creating courses.</string>
    <string name="test_data_management">Test Data Management</string>
    <string name="clear_db_data">Clear DB Data</string>
    <string name="clear_and_seed_db">Clear and Seed DB</string>
    <string name="terms">Terms</string>
    <string name="courses">Courses</string>
    <string name="course_mentor_3">Course Mentor 3:</string>
    <string name="course_mentor_2">Course Mentor 2:</string>
</resources>
