<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.clstephenson.mywgutracker.ui.CourseActivity">
    <item
        android:id="@+id/action_view_notes"
        android:icon="@drawable/ic_note"
        android:orderInCategory="100"
        android:title="@string/notes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit_course"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="110"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_course"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="120"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>
