<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_term"
            android:title="@string/title_activity_term_list" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_course"
            android:title="@string/title_activity_course_list" />
    </group>

    <item android:title="Data Management">
        <menu>
            <item
                android:id="@+id/nav_clear_db"
                android:icon="@drawable/ic_warning"
                android:title="Clear Database" />
            <item
                android:id="@+id/nav_seed_db"
                android:icon="@drawable/ic_warning"
                android:title="Seed Database" />
        </menu>
    </item>

</menu>
