<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AssessmentEditActivity"
    tools:showIn="@layout/activity_assessment_edit">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/assessment_input_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_small"
        android:layout_marginEnd="@dimen/activity_margin_small"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/assessment_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/assessment_title"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/assessment_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_small"
        android:layout_marginTop="@dimen/text_line_spacing"
        android:layout_marginEnd="@dimen/activity_margin_large"
        android:text="@string/assessment_type"
        android:textSize="@dimen/text_size_editor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assessment_input_title_layout" />

    <Spinner
        android:id="@+id/assessment_input_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_small"
        android:entries="@array/sample_list_items"
        app:layout_constraintBottom_toBottomOf="@id/assessment_status_label"
        app:layout_constraintStart_toEndOf="@id/assessment_status_label"
        app:layout_constraintTop_toTopOf="@id/assessment_status_label" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_small"
        android:layout_marginTop="@dimen/text_line_spacing"
        android:layout_marginEnd="@dimen/activity_margin_small"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assessment_status_label">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/assessment_input_goal_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/assessment_input_goal"
                android:layout_width="@dimen/date_input_width"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/goal_date"
                android:inputType="date"
                android:onClick="handleGoalDateInputClick" />

        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/assessment_switch_alert_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/activity_margin_small"
            android:switchPadding="@dimen/activity_margin_small"
            android:text="@string/enable_goal_alert"
            android:textSize="@dimen/text_size_editor" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>