<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.TermEditActivity"
    tools:showIn="@layout/activity_term_edit">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/term_input_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_small"
        android:layout_marginTop="@dimen/text_line_spacing"
        android:layout_marginEnd="@dimen/activity_margin_small"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/term_input_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/term_title"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/term_input_start_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_small"
        android:layout_marginTop="@dimen/text_line_spacing"
        android:layout_marginEnd="@dimen/activity_margin_small"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/term_input_title_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/term_input_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:hint="@string/start_date"
            android:inputType="date"
            android:onClick="handleStartDateInputClick" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/term_input_end_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_small"
        android:layout_marginTop="@dimen/text_line_spacing"
        android:layout_marginEnd="@dimen/activity_margin_small"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/term_input_start_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/term_input_end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:hint="@string/end_date"
            android:inputType="date"
            android:onClick="handleEndDateInputClick" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>